[gd_scene load_steps=11 format=3 uid="uid://cojapnf736xja"]

[ext_resource type="Script" path="res://source/scripts/about_state.gd" id="1_fjqwn"]
[ext_resource type="Texture2D" uid="uid://bxvbt63obr7j1" path="res://assets/UI/Return_Button_Frames.png" id="2_f8byl"]
[ext_resource type="Texture2D" uid="uid://bc78jplwr5vev" path="res://assets/UI/Wipe_Button_Frames.png" id="4_hvx2w"]

[sub_resource type="Theme" id="Theme_wm1ng"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_tl81p"]
default_font_size = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_h3tl6"]
atlas = ExtResource("2_f8byl")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjndw"]
atlas = ExtResource("2_f8byl")
region = Rect2(298, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_lislm"]
atlas = ExtResource("4_hvx2w")
region = Rect2(0, 0, 298, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_srj47"]
atlas = ExtResource("4_hvx2w")
region = Rect2(298, 0, 298, 0)

[sub_resource type="Theme" id="Theme_jtxkl"]
default_font_size = 18

[node name="AboutState" type="Node2D"]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 720.0
script = ExtResource("1_fjqwn")

[node name="ColorRect" type="ColorRect" parent="Container"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Fishes" type="Control" parent="Container"]
anchors_preset = 0
offset_right = 480.0
offset_bottom = 720.0

[node name="Title" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.0
offset_right = 235.0
offset_bottom = 91.0
grow_horizontal = 2
theme = SubResource("Theme_wm1ng")
text = "Best Run
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Copyright" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -50.0
offset_right = 243.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_tl81p")
text = "Copyright 2025 S1air Coding"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="TextureButton" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = 189.0
offset_right = 261.0
offset_bottom = 339.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.333, 0.333)
texture_normal = SubResource("AtlasTexture_h3tl6")
texture_hover = SubResource("AtlasTexture_vjndw")

[node name="WipeButton" type="TextureButton" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 255.0
offset_right = 263.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.333, 0.333)
texture_normal = SubResource("AtlasTexture_lislm")
texture_hover = SubResource("AtlasTexture_srj47")

[node name="HiScore" type="Label" parent="Container"]
layout_mode = 0
offset_left = 41.0
offset_top = 113.0
offset_right = 445.0
offset_bottom = 545.0
theme = SubResource("Theme_jtxkl")
text = "1
2
3
4
5
6
7
8
9
10
11
12
13
14
15"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Container/ReturnButton" to="Container" method="_on_return_button_pressed"]
[connection signal="pressed" from="Container/WipeButton" to="Container" method="_on_wipe_button_pressed"]
